; ModuleID = '/home/carl/AnghaBench/linux/arch/s390/boot/extr_..libstring.c___strnend.c'
source_filename = "/home/carl/AnghaBench/linux/arch/s390/boot/extr_..libstring.c___strnend.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (i8*, i64)* @__strnend to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @__strnend(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  store i64 0, i64* %5, align 8
  %7 = load i8*, i8** %3, align 8
  %8 = load i64, i64* %4, align 8
  %9 = getelementptr inbounds i8, i8* %7, i64 %8
  store i8* %9, i8** %6, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load i64, i64* %5, align 8
  %13 = call { i8*, i8* } asm sideeffect "0: srst  $0,$1\0A   jo    0b", "={dx},={ax},{ax},0,1,~{cc},~{memory},~{dirflag},~{fpsr},~{flags}"(i64 %12, i8* %10, i8* %11) #1, !srcloc !2
  %14 = extractvalue { i8*, i8* } %13, 0
  %15 = extractvalue { i8*, i8* } %13, 1
  store i8* %14, i8** %6, align 8
  store i8* %15, i8** %3, align 8
  %16 = load i8*, i8** %6, align 8
  ret i8* %16
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
!2 = !{i32 293, i32 321}
